@@ -340,3 +340,11 @@ check_autocor <- function(autocor) {
   stop_not_cor_brms(autocor)
   autocor
 }
+
+remove_autocor <- function(x, keep = FALSE) {
+  # convenience function to ignore autocorrelation terms
+  if (!keep) {
+    x$autocor <- cor_arma()
+  }
+  x
+}
