@@ -23,6 +23,13 @@
       Alex Forrence.
     }
   }
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item Fix an unexpected error in \code{marginal_effects}
+      occuring for some models with autocorrelation terms 
+      thanks to Markus Gesmann.
+    }
+  }
 }
 
 \section{CHANGES IN VERSION 1.6.1}{
